--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
 
   <div class="nav">
     <a href="picking.html">Picking</a>
+    <a href="prichody.html">Příchody</a>
+    <a href="plan_smen.html">Plán směn</a>
+    <a href="tisk.html">Tisk</a>
     <a href="barcode.html">Barcode</a>
     <a href="zony.html">Zóny</a>
     <a href="bra_pc.html">Wait BRA</a>
-    <a href="prichody.html">Příchody</a>
-    <a href="plan_smen.html">Plán směn</a>
+    
   </div>
 
   <script>
