--- a/barcode.html
+++ b/barcode.html
@@ -147,7 +147,7 @@
     <input
       type="text"
       id="text"
-      placeholder="Data, více dat odděl středníkem;"
+      placeholder="Zde vlož, více dat odděl středníkem;"
       onkeydown="if(event.key==='Enter'){event.preventDefault();generateBarcode();}"
       autocomplete="off"
     >
