--- a/tisk.html
+++ b/tisk.html
@@ -2,25 +2,34 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Více kódů na štítku + mezičáry</title>
+  <title>Štítky - generátor (řada od–do, sudé/liché, patro, pozice X/L/A/B)</title>
   <script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.5/dist/JsBarcode.all.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
   <style>
     body { background: #0066b3; font-family: 'Open Sans',sans-serif; color: white; text-align: center; }
-    .main-content { margin: 60px auto 0; width: 97vw; max-width: 760px; background: rgba(255,255,255,0.09); border-radius: 18px; padding: 26px 18px 36px 18px; }
+    .main-content { margin: 60px auto 0; width: 97vw; max-width: 610px; background: rgba(255,255,255,0.09); border-radius: 18px; padding: 26px 18px 36px 18px; }
     label { font-size: 1.08rem; font-weight: 600; display: block; margin: 9px 0 4px 0;}
     input, select { padding: 7px 12px; font-size: 1.03rem; border-radius: 6px; border: 1.1px solid #bbb; font-family: 'Open Sans', sans-serif; background: #fff; color: #222; font-weight: 400; margin-right: 8px;}
-    .checkbox { transform: scale(1.16); margin-right: 2px; }
-    .kody-preview { background: #fff; color: #223; border-radius: 8px; margin: 24px auto 0; max-width: 530px; min-height: 40px; text-align: left; padding: 10px 14px; font-size: 1.1rem; }
-    .print-area-wrap { margin: 36px auto 0; max-width: 98vw; overflow: auto; background: #fff; padding: 8px; border-radius: 10px; color: #222; }
+    .pozice-box label { display: inline-block; font-weight: 400; margin-right: 13px; }
+    .checkbox { transform: scale(1.18); margin-right: 2px; }
+    .added-codes { background: #fff; color: #223; border-radius: 8px; margin: 18px auto 0; max-width: 400px; min-height: 36px; text-align: left; padding: 9px 14px; font-size: 1.07rem; }
+    .print-area-wrap { margin: 32px auto 0; max-width: 98vw; overflow: auto; background: #fff; padding: 8px; border-radius: 10px; color: #222; }
     .print-labels-grid { display: flex; flex-direction: column; gap: 10px; align-items: flex-start;}
     .print-label {
       background: #fff; border-radius: 7px; box-shadow: 0 2px 8px rgba(0,0,0,0.09); padding: 10px 16px 10px 16px; margin: 2px 0;
       display: flex; flex-direction: column; align-items: center; justify-content: flex-start; gap: 0px;
     }
-    .ean-segment { display: flex; flex-direction: column; align-items: center; justify-content: flex-start; width: 100%; margin-bottom: 0px; }
-    .bar-text { margin-top: 2px; font-size: 1.13rem; letter-spacing: 2px; font-family: 'Open Sans', monospace, monospace; }
+    .ean-segment { display: flex; flex-direction: column; align-items: center; width: 100%; }
+    .bar-text { margin-top: 2px; font-size: 1.12rem; letter-spacing: 2px; font-family: 'Open Sans', monospace, monospace; }
     .divider { border-bottom: 1px dashed #bbb; width: 98%; margin: 7px 0 7px 0; }
+    .btn-row { margin-top: 18px; }
+    button {
+      margin: 6px 7px 0 0; padding: 9px 24px; font-size: 1.07rem; border-radius: 7px; border: none;
+      background: #DB4B3E; color: #fff; font-weight: 600; cursor: pointer; transition: background 0.17s, transform 0.18s;
+    }
+    button:hover { background: #b43a2e; transform: scale(1.03);}
+    .del-btn { background: #c2c2c2; color: #444; font-size: .93rem; padding: 3px 10px; margin-left: 8px;}
+    .del-btn:hover { background: #B84B3E; color: #fff;}
     @media print {
       body * { visibility: hidden !important; }
       .print-labels-grid, .print-labels-grid * { visibility: visible !important;}
@@ -30,52 +39,103 @@
       }
       .main-content, .btn-row { display: none !important; }
     }
-    .btn-row { margin-top: 22px; }
-    button {
-      margin: 6px 11px 0 0; padding: 9px 24px; font-size: 1.08rem; border-radius: 7px; border: none;
-      background: #DB4B3E; color: #fff; font-weight: 600; cursor: pointer; transition: background 0.17s, transform 0.18s;
-    }
-    button:hover { background: #b43a2e; transform: scale(1.03);}
   </style>
 </head>
 <body>
   <div class="main-content">
-    <!-- (formulář zůstává stejný jako dřív – viz výše) -->
-    <!-- pro úsporu místa zkrácený vstup, pokud chceš plný výběr jako výše, můžu dopsat! -->
-    <label for="codes">Kódy oddělené středníkem:</label>
-    <input id="codes" style="width:350px;" value="PTA-001-08-31-L;PTA-002-08-31-L;PTA-003-08-31-L;PTA-004-08-31-L;PTA-005-08-31-L">
+    <label>Ruční generování štítků – rozsahy a pozice:</label>
+    <input id="zona" value="PTA" style="width:54px;"> Zóna
+    <input id="ulicka" value="001" style="width:54px;"> Ulička
+    <input id="patro" value="01" style="width:42px;"> Patro
+    <div>
+      Řada od: <input id="radaOd" value="00" style="width:46px;"> do <input id="radaDo" value="20" style="width:46px;">
+      <label style="font-size: 1em; display: inline; margin:0 6px;">
+        <input type="radio" name="typRady" value="all" checked>vše
+      </label>
+      <label style="font-size: 1em; display: inline; margin:0 6px;">
+        <input type="radio" name="typRady" value="even">sudé
+      </label>
+      <label style="font-size: 1em; display: inline; margin:0 6px;">
+        <input type="radio" name="typRady" value="odd">liché
+      </label>
+    </div>
+    <div class="pozice-box" style="margin-top:10px;margin-bottom:8px;">
+      Pozice:
+      <label><input type="checkbox" class="checkbox pozice" value="X" checked>X</label>
+      <label><input type="checkbox" class="checkbox pozice" value="L">L</label>
+      <label><input type="checkbox" class="checkbox pozice" value="A">A</label>
+      <label><input type="checkbox" class="checkbox pozice" value="B">B</label>
+    </div>
+    <button onclick="addCodes()">Přidat všechny kombinace</button>
+
+    <div class="added-codes" id="added-codes"></div>
+
     <label for="per-label">Kódů na štítek:</label>
     <input type="number" id="per-label" value="3" min="1" max="10" style="width:44px;">
     <label for="label-size">Velikost štítku (mm):</label>
     <input type="text" id="label-size" value="100x60" style="width:88px;">
     <label for="barcode-size">Velikost kódu (mm):</label>
     <input type="text" id="barcode-size" value="90x14" style="width:88px;">
+
     <div class="btn-row">
       <button onclick="generateLabels()">Generovat štítky</button>
       <button style="background:#333;" onclick="printLabels()">Tisknout</button>
     </div>
-    <div class="kody-preview" id="kody-preview"></div>
   </div>
   <div id="print-area" class="print-area-wrap" style="display:none"></div>
   <script>
+    let allCodes = [];
+
+    function refreshCodes() {
+      let html = '';
+      allCodes.forEach((c, i) => {
+        html += c + '<button class="del-btn" onclick="deleteCode(' + i + ')">✕</button><br>';
+      });
+      document.getElementById('added-codes').innerHTML = html || '<i>Nejsou přidané žádné kódy.</i>';
+    }
+
+    function addCodes() {
+      const zona = document.getElementById('zona').value.trim();
+      const ulicka = document.getElementById('ulicka').value.trim();
+      const patro = document.getElementById('patro').value.trim();
+      const radaOd = parseInt(document.getElementById('radaOd').value,10);
+      const radaDo = parseInt(document.getElementById('radaDo').value,10);
+      const typRady = document.querySelector('input[name="typRady"]:checked').value;
+      const pozice = Array.from(document.querySelectorAll('.pozice:checked')).map(x => x.value);
+
+      if (!zona || !ulicka || isNaN(radaOd) || isNaN(radaDo) || !patro || pozice.length === 0) {
+        alert("Vyplň všechny části a vyber aspoň jednu pozici!");
+        return;
+      }
+      for (let r = radaOd; r <= radaDo; r++) {
+        if (typRady === "even" && r % 2 !== 0) continue;
+        if (typRady === "odd" && r % 2 === 0) continue;
+        let rStr = r.toString().padStart(2,"0");
+        pozice.forEach(p => {
+          let kod = `${zona}-${ulicka}-${rStr}-${patro}-${p}`;
+          allCodes.push(kod);
+        });
+      }
+      refreshCodes();
+    }
+
+    function deleteCode(idx) {
+      allCodes.splice(idx, 1);
+      refreshCodes();
+    }
+
     function mmToPx(mm) { return Math.round(mm * (96 / 25.4)); }
+
     function generateLabels() {
-      const codes = document.getElementById('codes').value.split(';').map(s => s.trim()).filter(Boolean);
       const perLabel = Math.max(1, parseInt(document.getElementById('per-label').value,10));
       const [labelW, labelH] = document.getElementById('label-size').value.split('x').map(Number);
       const [bcW, bcH] = document.getElementById('barcode-size').value.split('x').map(Number);
 
-      // Výpis do preview
-      document.getElementById('kody-preview').textContent =
-        codes.slice(0, 30).join(', ') +
-        (codes.length > 30 ? ` … (celkem ${codes.length} kódů)` : ` (${codes.length} kódů)`);
-
-      // Rozděl na štítky (skupiny)
+      let codes = [...allCodes];
       let labels = [];
       for (let i = 0; i < codes.length; i += perLabel)
         labels.push(codes.slice(i, i + perLabel));
 
-      // Render
       const printArea = document.getElementById('print-area');
       printArea.innerHTML = '';
       printArea.style.display = 'block';
@@ -123,6 +183,7 @@
       printArea.appendChild(grid);
       window.scrollTo(0,document.body.scrollHeight);
     }
+
     function printLabels() {
       const printArea = document.getElementById('print-area');
       if (!printArea || printArea.innerHTML.trim() === '') {
