--- a/prichody.html
+++ b/prichody.html
@@ -414,7 +414,7 @@
       if (e.key === "Enter") adminOk.click();
     });
     adminOk.addEventListener('click', function() {
-      if (adminPwd.value === 'vedouci123') {
+      if (adminPwd.value === 'doma') {
         jeVedouci = true;
         adminModalBg.classList.remove('show');
         zobrazTlacitka();
