--- a/tisk.html
+++ b/tisk.html
@@ -7,10 +7,20 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap" rel="stylesheet">
   <style>
     body { background: #0066b3; font-family: 'Open Sans',sans-serif; color: white; text-align: center; }
-    .main-content { margin: 60px auto 0; width: 97vw; max-width: 610px; background: rgba(255,255,255,0.09); border-radius: 18px; padding: 26px 18px 36px 18px; }
-    label { font-size: 1.08rem; font-weight: 600; display: block; margin: 9px 0 4px 0;}
-    input, select { padding: 7px 12px; font-size: 1.03rem; border-radius: 6px; border: 1.1px solid #bbb; font-family: 'Open Sans', sans-serif; background: #fff; color: #222; font-weight: 400; margin-right: 8px;}
-    .pozice-box label { display: inline-block; font-weight: 400; margin-right: 13px; }
+    .main-content { margin: 60px auto 0; width: 97vw; max-width: 650px; background: rgba(255,255,255,0.09); border-radius: 18px; padding: 26px 18px 36px 18px; }
+    .form-row {
+      display: flex; flex-wrap: wrap; align-items: center; gap: 15px; margin-bottom: 18px; justify-content: center;
+    }
+    .form-row label {
+      font-size: 1.08rem; font-weight: 600; margin-right: 6px; min-width: 66px; text-align: right;
+    }
+    .form-row input[type="text"], .form-row input[type="number"] {
+      padding: 7px 12px; font-size: 1.03rem; border-radius: 6px; border: 1.1px solid #bbb; font-family: 'Open Sans', sans-serif; background: #fff; color: #222; font-weight: 400; margin-right: 6px; width: 65px;
+    }
+    .form-row .rada-box { display: flex; align-items: center; gap: 4px;}
+    .form-row .pozice-box label {
+      font-weight: 400; margin-right: 12px; margin-left: 0;
+    }
     .checkbox { transform: scale(1.18); margin-right: 2px; }
     .added-codes { background: #fff; color: #223; border-radius: 8px; margin: 18px auto 0; max-width: 400px; min-height: 36px; text-align: left; padding: 9px 14px; font-size: 1.07rem; }
     .print-area-wrap { margin: 32px auto 0; max-width: 98vw; overflow: auto; background: #fff; padding: 8px; border-radius: 10px; color: #222; }
@@ -43,39 +53,48 @@
 </head>
 <body>
   <div class="main-content">
-    <label>Ruční generování štítků – rozsahy a pozice:</label>
-    <input id="zona" value="PTA" style="width:54px;"> Zóna
-    <input id="ulicka" value="001" style="width:54px;"> Ulička
-    <input id="patro" value="01" style="width:42px;"> Patro
-    <div>
-      Řada od: <input id="radaOd" value="00" style="width:46px;"> do <input id="radaDo" value="20" style="width:46px;">
-      <label style="font-size: 1em; display: inline; margin:0 6px;">
-        <input type="radio" name="typRady" value="all" checked>vše
-      </label>
-      <label style="font-size: 1em; display: inline; margin:0 6px;">
-        <input type="radio" name="typRady" value="even">sudé
-      </label>
-      <label style="font-size: 1em; display: inline; margin:0 6px;">
-        <input type="radio" name="typRady" value="odd">liché
-      </label>
-    </div>
-    <div class="pozice-box" style="margin-top:10px;margin-bottom:8px;">
-      Pozice:
-      <label><input type="checkbox" class="checkbox pozice" value="X" checked>X</label>
-      <label><input type="checkbox" class="checkbox pozice" value="L">L</label>
-      <label><input type="checkbox" class="checkbox pozice" value="A">A</label>
-      <label><input type="checkbox" class="checkbox pozice" value="B">B</label>
-    </div>
-    <button onclick="addCodes()">Přidat všechny kombinace</button>
+    <label style="font-size:1.13em; margin-bottom:9px; display:inline-block;">Ruční generování štítků – rozsahy a pozice:</label>
+    <form class="form-row" onsubmit="event.preventDefault(); addCodes();">
+      <label for="zona">Zóna</label>
+      <input id="zona" type="text" value="PTA" style="width:54px;">
+      <label for="ulicka">Ulička</label>
+      <input id="ulicka" type="text" value="001" style="width:54px;">
+      <label for="radaOd">Řada</label>
+      <div class="rada-box">
+        <input id="radaOd" type="text" value="00" style="width:44px;" title="Řada od">
+        <span style="margin: 0 3px;">až</span>
+        <input id="radaDo" type="text" value="20" style="width:44px;" title="Řada do">
+        <label style="font-size: 1em; font-weight:400; margin:0 3px;">
+          <input type="radio" name="typRady" value="all" checked>vše
+        </label>
+        <label style="font-size: 1em; font-weight:400; margin:0 3px;">
+          <input type="radio" name="typRady" value="even">sudé
+        </label>
+        <label style="font-size: 1em; font-weight:400; margin:0 3px;">
+          <input type="radio" name="typRady" value="odd">liché
+        </label>
+      </div>
+      <label for="patro">Pozice</label>
+      <input id="patro" type="text" value="01" style="width:42px;">
+      <div class="pozice-box" style="margin-left:9px;">
+        <label><input type="checkbox" class="checkbox pozice" value="X" checked>X</label>
+        <label><input type="checkbox" class="checkbox pozice" value="L">L</label>
+        <label><input type="checkbox" class="checkbox pozice" value="A">A</label>
+        <label><input type="checkbox" class="checkbox pozice" value="B">B</label>
+      </div>
+      <button type="submit" style="margin-left: 12px;">Přidat kombinace</button>
+    </form>
 
     <div class="added-codes" id="added-codes"></div>
 
-    <label for="per-label">Kódů na štítek:</label>
-    <input type="number" id="per-label" value="3" min="1" max="10" style="width:44px;">
-    <label for="label-size">Velikost štítku (mm):</label>
-    <input type="text" id="label-size" value="100x60" style="width:88px;">
-    <label for="barcode-size">Velikost kódu (mm):</label>
-    <input type="text" id="barcode-size" value="90x14" style="width:88px;">
+    <div style="margin-top:12px;">
+      <label for="per-label">Kódů na štítek:</label>
+      <input type="number" id="per-label" value="3" min="1" max="10" style="width:44px;">
+      <label for="label-size">Velikost štítku (mm):</label>
+      <input type="text" id="label-size" value="100x60" style="width:88px;">
+      <label for="barcode-size">Velikost kódu (mm):</label>
+      <input type="text" id="barcode-size" value="90x14" style="width:88px;">
+    </div>
 
     <div class="btn-row">
       <button onclick="generateLabels()">Generovat štítky</button>
